--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_parachain_collator">Collator</string>
+  <string name="staking_parachain_select_collator">Select collator</string>
+
 <!--  <string name="staking_reward_info_avg">Average APY</string>-->
 <!--  <string name="staking_reward_info_max">Maximum APY</string>-->
 
