--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="common_missing_account_title">%s account is missing</string>
+  <string name="staking_missing_account_message">You should add %s account to the wallet in order to start staking</string>
+
+  <string name="common_enter_amount">Enter amount…</string>
+  <string name="staking_parachain_select_collator_hint">Select collator…</string>
+  <string name="staking_parachain_wont_receive_rewards_title">You will not receive rewards</string>
+  <string name="staking_parachain_wont_receive_rewards_message">Your stake will be less than the minimum stake (%s) for this collator.</string>
+  <string name="common_per_year_format">%s / year</string>
+
+  <string name="staking_parachain_collator">Collator</string>
+  <string name="staking_parachain_select_collator">Select collator</string>
+
 <!--  <string name="staking_reward_info_avg">Average APY</string>-->
 <!--  <string name="staking_reward_info_max">Maximum APY</string>-->
 
