--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_parachain_reward_frequency_hint">Tokens in stake produce rewards each round (%s)</string>
+  <string name="staking_setup_amount_too_low_strict">Minimum stake should be strictly greater than (%s)</string>
+
   <string name="common_missing_account_title">%s account is missing</string>
   <string name="staking_missing_account_message">You should add %s account to the wallet in order to start staking</string>
 
