--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_custom_validators_settings_sort_apr">Estimated rewards (% APR)</string>
+
   <string name="staking_parachain_collator_own_stake">Collator\'s own stake</string>
   <string name="staking_parachain_collators_number_format">Collators: %s</string>
   <string name="staking_rewards">Rewards</string>
