--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_parachain_your_collators">Your collators</string>
+
   <string name="staking_parachain_next_round_format">waiting for the next round (%s)</string>
   <string name="staking_parachain_status_inactive_message">You will not receive rewards for this round since none of your delegations is active.</string>
 
