--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_parachain_max_delegations_title">You can\'t select a new collator</string>
+  <string name="staking_parachain_max_delegations_message">You have reached the maximum number of delegations of %d collators</string>
+
   <string name="staking_parachain_new_collator">New collator</string>
   <string name="staking_parachain_collator_details_oversubscribed">Collator\'s minimum stake is higher than your delegation. You will not receive rewards from the collator.</string>
 
