--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_parachain_unbond_already_exists_message">You are already unstaking tokens from this collator. You can only have one pending unstake per collator</string>
+  <string name="staking_parachain_unbond_already_exists_title">You cannot unstake from this collator</string>
   <string name="staking_parachain_stake_more_hint">You will get increased rewards starting from the next round</string>
   <string name="staking_parachain_max_delegations_title">You can\'t select a new collator</string>
   <string name="staking_parachain_max_delegations_message">You have reached the maximum number of delegations of %d collators</string>
