--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_unstake_all_question">Unstake all?</string>
+  <string name="parachain_staking_unstake_all">Remaining staking balance will drop under minimum network value (%s) and will also be added to the unstaking amount</string>
+  <string name="parachain_staking_unbond_no_rewards">Your stake will be less than the minimum stake (%s) for this collator.</string>
+
   <string name="staking_parachain_unbond_already_exists_message">You are already unstaking tokens from this collator. You can only have one pending unstake per collator</string>
   <string name="staking_parachain_unbond_already_exists_title">You cannot unstake from this collator</string>
   <string name="staking_parachain_stake_more_hint">You will get increased rewards starting from the next round</string>
