--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="staking_parachain_no_unbond_collators_title">No collators available for unstake</string>
+  <string name="staking_parachain_no_unbond_collators_message">You have pending unstake requests for all of your collators.</string>
+
   <string name="staking_unstake_all_question">Unstake all?</string>
   <string name="parachain_staking_unstake_all">Remaining staking balance will drop under minimum network value (%s) and will also be added to the unstaking amount</string>
   <string name="parachain_staking_unbond_no_rewards">Your stake will be less than the minimum stake (%s) for this collator.</string>
