--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="parachain_staking_not_active_collator_title">Cannot stake with this collator</string>
+  <string name="parachain_staking_not_active_collator_message">Selected collator showed intention to stop participating in the staking.</string>
+
   <string name="parachain_staking_manage_collators">Manage collators</string>
 
   <string name="parachain_staking_change_collator">Change collator</string>
