--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="parachain_staking_cannot_stake_with_collator">Cannot stake with this collator</string>
+  <string name="parachain_staking_not_active_collator_message">Selected collator showed intention to stop participating in the staking.</string>
+
+  <string name="parachain_staking_collator_cannot_bond_more">Cannot add stake to this collator</string>
+  <string name="parachain_staking_pending_revoke_message">You cannot add stake to collator for which you are unstaking all tokens.</string>
+
   <string name="parachain_staking_manage_collators">Manage collators</string>
 
   <string name="parachain_staking_change_collator">Change collator</string>
