--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+
+  <string name="wallet_send_tokens_to">to</string>
+
+<!--  <string name="wallet_send_tokens_on">Send %s on</string>-->
+  <string name="wallet_send_tokens_on">Send %s from</string>
+
   <string name="parachain_staking_cannot_stake_with_collator">Cannot stake with this collator</string>
   <string name="parachain_staking_not_active_collator_message">The selected collator showed intention to stop participating in the staking.</string>
 
@@ -144,7 +150,6 @@
 
   <string name="common_cannot_open_link">Cannot open this link</string>
 
-  <string name="wallet_send_tokens_on">Send %s on</string>
 
   <string name="common_validation_invalid_address_title">Invalid recipient</string>
   <string name="common_validation_invalid_address_message">Recipient should be a valid %s address</string>
