--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
   <string name="wallet_send_recipient_network">Recipient network</string>
   <string name="wallet_send_tokens_to">to</string>
 
-<!--  <string name="wallet_send_tokens_on">Send %s on</string>-->
-  <string name="wallet_send_tokens_on">Send %s from</string>
+  <string name="wallet_send_tokens_on">Send %s on</string>
+  <string name="wallet_send_tokens_from">Send %s from</string>
 
   <string name="parachain_staking_cannot_stake_with_collator">Cannot stake with this collator</string>
   <string name="parachain_staking_not_active_collator_message">The selected collator showed intention to stop participating in the staking.</string>
