--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -480,7 +480,7 @@
   <string name="staking_parachain_your_collators_elected">Активные коллаторы, не производящие вам наград</string>
   <string name="staking_parachain_your_collators_inactive">Коллаторы, не имеющие достаточного стейка для избрания сетью</string>
   <string name="staking_parachain_your_collators_waiting">Коллаторы, стекинг в которых начнется в следующем раунде</string>
-  <string name="staking_parachain_your_collators_waiting_title">Ожидающие коллаторы (%s)</string>
+  <string name="staking_parachain_your_collators_waiting_title">Ожидающие (%s)</string>
   <string name="staking_payout">Выплата</string>
   <string name="staking_payout_expired">Срок выплаты истёк</string>
   <plurals name="staking_payouts_days_left">
@@ -667,7 +667,12 @@
   <string name="wallet_search_empty_title">Убедитесь, что адрес\nиз правильной сети</string>
   <string name="wallet_search_empty_title_v2_2_0">Неверный формат адреса.\nУбедитесь, что адрес \nсоответствует сети</string>
   <string name="wallet_send_balance_minimal">Минимальный баланс</string>
+  <string name="wallet_send_cannot_pay_cross_chain_fee">У вас недостаточно токенов для оплаты межсетевой комиссии в размере %s.\nОстаток баланса после перевода: %s</string>
+  <string name="wallet_send_cannot_pay_network_fee">У вас недостаточно токенов, чтобы оплатить комиссию сети в размере %s.\n Доступный баланс: %s</string>
+  <string name="wallet_send_confirm_hint">Межсетевая комиссия добавляется к введенной сумме. Получатель может получить часть межсетевой комиссии</string>
   <string name="wallet_send_confirm_transfer">Подтвердить</string>
+  <string name="wallet_send_cross_chain">Между сетями</string>
+  <string name="wallet_send_cross_chain_fee">Межсетевая комиссия</string>
   <string name="wallet_send_dead_recipient_commission_asset_message">Ваш перевод завершится ошибкой, так как у получателя недостаточно %s для приема переводов в других токенах.</string>
   <string name="wallet_send_dead_recipient_commission_asset_title">Получатель не может принять перевод</string>
   <string name="wallet_send_dead_recipient_message">Ваш перевод не состоится, так как окончательная сумма на целевом счете будет меньше, чем минимальный баланс. Пожалуйста, попробуйте увеличить сумму.</string>
@@ -675,10 +680,17 @@
   <string name="wallet_send_existential_warning_message_v2_2_0">Ваша учетная запись будет удалена из сети после перевода, так как опустит общий баланс ниже минимального</string>
   <string name="wallet_send_existential_warning_title">Перевод удалит аккаунт</string>
   <string name="wallet_send_existential_warnining_transfer_dust">Ваша учетная запись будет удалена из блокчейна после перевода, потому что общий баланс становится ниже минимального. Остаток также будет переведен получателю.</string>
+  <string name="wallet_send_from_network">Из сети</string>
   <string name="wallet_send_insufficient_balance_commission">У вас недостаточно %s для оплаты комиссии</string>
+  <string name="wallet_send_myself">Себе</string>
+  <string name="wallet_send_on_chain">Внутри сети</string>
   <string name="wallet_send_phishing_warning_text">Следующий адрес: %s как известно, используется для фишинга, поэтому мы не рекомендуем отправлять токены на этот адрес. Вы все равно хотите продолжить?</string>
   <string name="wallet_send_phishing_warning_title">Предупреждение о мошенничестве</string>
+  <string name="wallet_send_recipient_network">Сеть получателя</string>
+  <string name="wallet_send_to_network">В сеть</string>
+  <string name="wallet_send_tokens_from">Отправить %s из</string>
   <string name="wallet_send_tokens_on">Отправить %s в</string>
+  <string name="wallet_send_tokens_to">в</string>
   <string name="wallet_send_total_title">Всего</string>
   <string name="wallet_sender">Отправитель</string>
   <string name="wallet_transfer_details_send_back">Отправить этому контакту</string>
