--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="wallet_tokens">Tokens</string>
+
   <string name="assets_search_hint">Search by network or token</string>
   <string name="assets_search_placeholder">No networks or tokens with\nentered name were found</string>
 
