--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_import_wallet_title">Import wallet</string>
+  <string name="account_import_wallet_subtitle">Nova is compatible with all apps</string>
+
+  <string name="account_add_watch_only_description">Track any wallet by its address</string>
+
   <string name="common_ok_back">Okay, back</string>
 
   <string name="account_watch_key_missing_title">Oops! Key is missing</string>
