Add groups to wallets

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="account_watch_only">watch-only</string>
+
   <string name="account_import_wallet_title">Import wallet</string>
   <string name="account_import_wallet_subtitle">Nova is compatible with all apps</string>
 
